--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -42,14 +42,14 @@ header .banner-text h1 {
 }
 header .banner-text h3 {
    font: 18px/1.9em 'librebaskerville-regular', serif;
-   color: #A8A8A8;
+   color: #f21212;
    margin: 0 auto;
    width: 70%;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
 }
 header .banner-text h3 span,
 header .banner-text h3 a {
-   color: #fff;
+   color: rgb(9, 183, 32);
 }
 header .banner-text hr {
    width: 60%;
@@ -70,8 +70,8 @@ header .social li {
    margin: 0 15px;
    padding: 0;
 }
-header .social li a { color: #fff; }
-header .social li a:hover { color: #11ABB0; }
+header .social li a { color: rgb(31, 138, 225); }
+header .social li a:hover { color: #8322eb; }
 
 /* scrolldown link */
 header .scrolldown a {
