--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -9,7 +9,7 @@ header {
    height: 900px;
    min-height: 500px;
    width: 100%;
-   background: #0f0f0f url(../images/header-background.jpg) no-repeat top center;
+   background: #0f0f0f url(../images/header-background.png) no-repeat top center;
    background-size: cover !important;
 	-webkit-background-size: cover !important;
    text-align: center;
@@ -42,14 +42,14 @@ header .banner-text h1 {
 }
 header .banner-text h3 {
    font: 18px/1.9em 'librebaskerville-regular', serif;
-   color: #f21212;
+   color: #daf911;
    margin: 0 auto;
    width: 70%;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
 }
 header .banner-text h3 span,
 header .banner-text h3 a {
-   color: rgb(9, 183, 32);
+   color: rgb(33, 247, 47);
 }
 header .banner-text hr {
    width: 60%;
@@ -70,8 +70,8 @@ header .social li {
    margin: 0 15px;
    padding: 0;
 }
-header .social li a { color: rgb(31, 138, 225); }
-header .social li a:hover { color: #8322eb; }
+header .social li a { color: rgb(244, 247, 250); }
+header .social li a:hover { color: #78d2f8; }
 
 /* scrolldown link */
 header .scrolldown a {
@@ -534,7 +534,7 @@ call-to-action .button {
 /* ------------------------------------------------------------------ */
 
 #testimonials {
-   background: #1F1F1F url(../images/testimonials-bg.jpg) no-repeat center center;
+   background: #1F1F1F url(../images/testimonials-bg.png) no-repeat center center;
    background-size: cover !important;
 	-webkit-background-size: cover !important;
    background-attachment: fixed;
